CUDA_Reduction/CUDA_Reduction/x64/Debug/CUDA_Reduction.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.43.34808\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction\x64\Debug\kernel.cu.obj "C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction\kernel.cu" 
C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction\kernel.cu(59): error : identifier "n" is undefined
        int num_blocks = (n + blockSize - 1) / blockSize;
                          ^
  
  1 error detected in the compilation of "C:/Users/Chestnut/source/repos/CUDA_Reduction/CUDA_Reduction/kernel.cu".
CUDACOMPILE : nvcc warning : Support for offline compilation for architectures prior to '<compute/sm/lto>_75' will be removed in a future release (Use -Wno-deprecated-gpu-targets to suppress warning).
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.8.targets(800,9): error MSB3721: 命令“"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.43.34808\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.8\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction\x64\Debug\kernel.cu.obj "C:\Users\Chestnut\source\repos\CUDA_Reduction\CUDA_Reduction\kernel.cu"”已退出，返回代码为 2。
